RESOLVED FIXED152319
Legacy style scrollbars do not change color when you mouse over them if you are scrolled
https://bugs.webkit.org/show_bug.cgi?id=152319
Summary Legacy style scrollbars do not change color when you mouse over them if you a...
Beth Dakin
Reported 2015-12-15 17:25:36 PST
Legacy style scrollbars do not change color when you mouse over them if you are scrolled rdar://problem/23317668
Attachments
Patch (3.56 KB, patch)
2015-12-15 20:24 PST, Beth Dakin
darin: review+
Beth Dakin
Comment 1 2015-12-15 20:24:26 PST
Darin Adler
Comment 2 2015-12-16 09:22:52 PST
Comment on attachment 267427 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=267427&action=review Any chance we can find a way of covering this with a regression test? > Source/WebCore/rendering/RenderView.cpp:209 > + Scrollbar* frameScrollbar = frameView().scrollbarAtPoint(windowPoint); > if (frameScrollbar) { I would probably put the definition inside the if statement.
Beth Dakin
Comment 3 2015-12-16 10:00:05 PST
(In reply to comment #2) > Comment on attachment 267427 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=267427&action=review > > Any chance we can find a way of covering this with a regression test? > We have still not figured out how to test scrollbar platform appearance in regression tests, but I absolutely think we need to figure out a way. These behaviors have a way of regressing quietly and we only notice after an all-too-long time. I need to think about how we could actually do this. ScrollAnimatorMac is the place in the code that can know if the right thing is happening, but it doesn't currently have any mechanism to share that information. If we can think of what to share it to, we might be able to figure out test infrastructure. > > Source/WebCore/rendering/RenderView.cpp:209 > > + Scrollbar* frameScrollbar = frameView().scrollbarAtPoint(windowPoint); > > if (frameScrollbar) { > > I would probably put the definition inside the if statement. Okay! Thanks Darin!
Beth Dakin
Comment 4 2015-12-16 10:10:00 PST
Note You need to log in before you can comment on or make changes to this bug.